--- a/Figma2/intex.html
+++ b/Figma2/intex.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figma</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./esc.css" media="screen and (min-width: 600px)">
 </head>
 <body>
 <header>
@@ -15,15 +16,15 @@
     </section>
     <section class="caja2">
         <div class="box">
-            <section class="estrella"></section>
+            <section class="estrella" id="a1"></section>
             <p>Rated 5 Stars in Reviews</p>
         </div>
         <div class="box">
-            <section class="estrella"></section>
+            <section class="estrella" id="a2"></section>
             <p>Rated 5 Stars in Report Guru</p>
         </div>
         <div class="box">
-            <section class="estrella"></section>
+            <section class="estrella" id="a3"></section>
             <p>Rated 5 Stars in BestTech</p>
         </div>
     </section>
